--- a/etc/kubernetes/manifests/pvc-redis.yaml
+++ b/etc/kubernetes/manifests/pvc-redis.yaml
@@ -1,1 +1,12 @@
-
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: redis-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: redis-sc
+  
