--- a/etc/kubernetes/manifests/sc-redis.yaml
+++ b/etc/kubernetes/manifests/sc-redis.yaml
@@ -1,1 +1,7 @@
 #sc
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: redis-sc
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
