--- a/.github/workflows/ci-storage_chr.yaml
+++ b/.github/workflows/ci-storage_chr.yaml
@@ -1,4 +1,4 @@
-name: CI-storage
+name: CI-storage_chr
 on: 
   push: 
     branches:
@@ -16,13 +16,13 @@ jobs:
       - name: init
         run: minikube start --driver=docker
       - name: deploy-sc
-        run: kubectl apply -f etc/kubernetes/manifests/sc-redis.yaml
+        run: kubectl apply -f main/etc/kubernetes/manifests/sc-redis.yaml
       - name: deploy-pv
-        run: kubectl apply -f etc/kubernetes/manifests/pv-redis.yaml
+        run: kubectl apply -f main/etc/kubernetes/manifests/pv-redis.yaml
       - name: deploy-pvc
-        run: kubectl apply -f etc/kubernetes/manifests/pvc-redis.yaml
+        run: kubectl apply -f main/etc/kubernetes/manifests/pvc-redis.yaml
       - name: deploy-po
-        run: kubectl apply -f etc/kubernetes/manifests/po-redis.yaml
+        run: kubectl apply -f main/etc/kubernetes/manifests/po-redis.yaml
       - name: test
         run:  |
           set -x
